# cns

./: .cz.yaml  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  README.md  canister_ids.json  dfx.json  mops.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/actions/: setup-python.yaml
.github/actions/commit-handler/: action.yaml
.github/actions/pr-handler/: action.yaml
.github/actions/pullrequest/approve/: action.yaml  main.py
.github/actions/pullrequest/create/: action.yaml  main.py
.github/actions/setup-python/: action.yaml
.github/workflows/: automation.yaml  changelog.yaml  check-commits-format.yaml  check-commits.yaml  code-style.yaml  create-release-pr.yaml  release.yaml  tests.yaml
canisters/name-registry/: Cargo.toml  spec.did
canisters/name-registry/src/: lib.rs  main.rs
canisters/name-registry/src/builders/: mod.rs  record.rs
canisters/name-registry/src/common/: constants.rs  mod.rs
canisters/name-registry/src/errors/: mod.rs  zone_apex_domain.rs
canisters/name-registry/src/repositories/: mod.rs  setup.rs  zone.rs
canisters/name-registry/src/types/: record.rs  record_name.rs  record_type.rs  zone_apex_domain.rs
canisters/name-registry/src/utils/: domain_name.rs  mod.rs
canisters/operator/: Cargo.toml
canisters/root/: Cargo.toml
canisters/test-client/: Cargo.toml  spec.did
canisters/test-client/src/: main.rs
lib/cns-client/rs/: Cargo.toml  README.md
lib/cns-client/rs/src/: lib.rs
lib/cns-client/rs/tests/: register_and_lookup.rs
lib/cns-js/: package.json  tsconfig.json  tsconfig.test.json  tsconfig.types.json  tsconfig.vite.json  vite.config.ts
lib/cns-js/src/: cns-client.ts  index.ts  utils.ts
lib/cns-js/src/cns-root/: cns-root-client.ts  cns-root-mappings.ts  cns-root-types.ts  index.ts
lib/cns-js/tests/: global-setup.ts  types.d.ts
lib/cns-js/tests/src/: smoke-test.spec.ts  util.ts
lib/ic-cns-canister-client/: CHANGELOG.md  Cargo.toml
lib/ic-cns-canister-client/rs/: Cargo.toml  README.md
lib/ic-cns-canister-client/rs/src/: lib.rs
lib/ic-cns-canister-client/rs/tests/: register_and_lookup.rs
lib/ic-cns-canister-client/tests/: register_and_lookup.rs
minimal_cns/: README.md
minimal_cns/canisters/cns_root/: cns_root.test.mo  lib.mo  mutations.mo  parse.mo  queries.mo
minimal_cns/canisters/tld_operator/: lib.mo  mutations.mo  queries.mo  tld_operator.test.mo
minimal_cns/common/: api_types.mo  cns_types.mo  metrics.mo  test_utils.mo
minimal_cns/common/data/domain/: Types.mo  lib.mo
minimal_cns/init/: common.sh  deploy_cns.sh  known_canisters.csv  known_subnets.csv  query_cns.sh  register_canisters.sh  register_icp_tld_operator.sh  register_subnets.sh
minimal_cns/src/: test_utils.mo
minimal_cns/src/backend/: cns_root.mo  cns_root.test.mo  cns_types.mo  metrics.mo  tld_operator.mo  tld_operator.test.mo
