[workspace]
resolver = "2"
members = [
    "canisters/name-registry",
    "canisters/operator",
    "canisters/root",
    "canisters/test-client",
    "lib/ic-cns-canister-client",
]

[workspace.package]
version = "0.1.0"
authors = ["DFINITY Stiftung"]
edition = "2021"
repository = "https://github.com/dfinity/cns"
homepage = "https://github.com/dfinity/cns#readme"
license = "Apache-2.0"

[workspace.dependencies]
assert_matches = "1"
candid = "0.10"
ic-cdk = "0.16"
lazy_static = "1"
ic-stable-structures = "0.5"
serde = "1"
rstest = "0.24"
thiserror = "1"
pocket-ic = "6"

cns-domain-registry = { path = "./canisters/name-registry", version = "0.1.0" }
ic-cns-canister-client = { path = "./lib/ic-cns-canister-client", version = "0.1.0" }
