[package]
name = "cns-domain-registry"
version = "0.1.0"
edition = "2021"
authors = ["DFINITY Stiftung"]
license = "Apache-2.0"
include = ["src", "Cargo.toml"]
homepage = "https://github.com/dfinity/cns#readme"
repository = "https://github.com/dfinity/cns"
categories = ["configuration", "cryptography", "wasm"]
keywords = [
  "internet-computer",
  "icp",
  "dfinity",
  "name-system",
  "domain-names",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9.2"
ic-stable-structures = "0.5.6"
serde = "1.0.181"
thiserror = "1.0.44"

[dev-dependencies]
rstest = "0.18.1"
