[package]
name = "cns-domain-registry"
include = ["src", "Cargo.toml"]
categories = ["configuration", "cryptography", "wasm"]
keywords = [
  "internet-computer",
  "icp",
  "dfinity",
  "name-system",
  "domain-names",
]

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candid.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest = "0.18.1"
