[package]
name = "test_client"
version = "0.1.0"
edition = "2021"
authors = ["DFINITY Stiftung"]
license = "Apache-2.0"
include = ["src", "Cargo.toml"]
homepage = "https://github.com/dfinity/cns#readme"
repository = "https://github.com/dfinity/cns"
keywords = [
  "internet-computer",
  "icp",
  "dfinity",
  "name-system",
  "domain-names",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
serde.workspace = true
cns_client.workspace = true

[dev-dependencies]
rstest = "0.18.1"
