[package]
name = "test-client"
include = ["src", "Cargo.toml"]

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
serde.workspace = true
ic-cns-canister-client.workspace = true

[dev-dependencies]
rstest = "0.18.1"
