[package]
name = "ic-cns-canister-client"
description = "A canister client library for using CNS on the Internet Computer"
readme = "README.md"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]
documentation = "https://docs.rs/ic-cns-canister-client"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candid.workspace = true
cns-domain-registry.workspace = true
ic-cdk.workspace = true
lazy_static.workspace = true
serde.workspace = true

[dev-dependencies]
pocket-ic.workspace = true
rstest.workspace = true
assert_matches.workspace = true
slog = "2.7"
